# bookkeeping-bot

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README_EN.md  config.example.json  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
bookkeeping_bot/: __init__.py  cli.py  config.py
bookkeeping_bot/bot/: __init__.py  app.py  formatter.py  handlers.py
bookkeeping_bot/core/: __init__.py  agent.py  llm_client.py  skill_loader.py
bookkeeping_bot/skills/: query_expenses.md  record_expense.md
bookkeeping_bot/storage/: __init__.py  base.py  notion.py
bookkeeping_bot/utils/: __init__.py  logger.py  retry.py
bot/: __init__.py  formatter.py  handlers.py
core/: __init__.py  agent.py  llm_client.py  skill_loader.py
docs/: notion-template.md  pypi-release.md
docs/superpowers/plans/: 2026-03-10-ai-bookkeeping-agent.md
skills/: delete_expense.md  update_expense.md
storage/: base.py  models.py  notion.py
tests/: test_agent.py  test_config.py  test_models.py  test_package_runtime.py  test_skill_loader.py
utils/: __init__.py  exceptions.py  logger.py  retry.py
