[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookkeeping-bot"
version = "0.1.0"
description = "AI-powered bookkeeping Telegram Bot with Notion storage"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "d3lap1ace"}
]
keywords = ["bookkeeping", "telegram", "bot", "notion", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot==20.7",
    "openai>=1.0.0",
    "notion-client>=2.2.1",
    "python-dotenv==1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.1.0",
]

[project.scripts]
bookkeeping-bot = "bookkeeping_bot.cli:main"

[project.urls]
Homepage = "https://github.com/d3lap1ace/bookeeping-skills"
Repository = "https://github.com/d3lap1ace/bookeeping-skills"
Issues = "https://github.com/d3lap1ace/bookeeping-skills/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bookkeeping_bot*"]

[tool.setuptools.package-data]
bookkeeping_bot = ["skills/*.md"]
